// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`game over page, null values 1`] = `
<div
  className="GameOver"
>
  <div>
    <div
      className="PlayAgain"
    >
      PLAY AGAIN?
    </div>
  </div>
  <div
    className="GameOverRow"
  >
    <div
      className="Scoreboard"
    >
      <div
        className="ScoreboardTitle"
      >
        Scoreboard
      </div>
      <hr
        className="ScoreboardHRLine"
      />
      <div
        className="ScoreboardTable"
      >
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardName"
          />
          <div
            className="ScoreboardName"
          />
        </div>
        <vr
          className="ScoreboardVRLine"
        />
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            W
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            T
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            L
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
      </div>
    </div>
    <div
      className="GameOverButtonsArea"
    >
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        REMATCH
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        MAIN MENU
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        QUIT
      </button>
    </div>
  </div>
</div>
`;

exports[`game over page, renders properly 1`] = `
<div
  className="GameOver"
>
  <div>
    <div
      className="PlayAgain"
    >
      PLAY AGAIN?
    </div>
  </div>
  <div
    className="GameOverRow"
  >
    <div
      className="Scoreboard"
    >
      <div
        className="ScoreboardTitle"
      >
        Scoreboard
      </div>
      <hr
        className="ScoreboardHRLine"
      />
      <div
        className="ScoreboardTable"
      >
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardName"
          >
            Prashant
          </div>
          <div
            className="ScoreboardName"
          >
            Vivek
          </div>
        </div>
        <vr
          className="ScoreboardVRLine"
        />
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            W
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            T
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            L
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
          <div
            className="ScoreboardName"
          >
            -1
          </div>
        </div>
      </div>
    </div>
    <div
      className="GameOverButtonsArea"
    >
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        REMATCH
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        MAIN MENU
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        QUIT
      </button>
    </div>
  </div>
</div>
`;

exports[`game over page, renders with empty names 1`] = `
<div
  className="GameOver"
>
  <div>
    <div
      className="PlayAgain"
    >
      PLAY AGAIN?
    </div>
  </div>
  <div
    className="GameOverRow"
  >
    <div
      className="Scoreboard"
    >
      <div
        className="ScoreboardTitle"
      >
        Scoreboard
      </div>
      <hr
        className="ScoreboardHRLine"
      />
      <div
        className="ScoreboardTable"
      >
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardName"
          />
          <div
            className="ScoreboardName"
          />
        </div>
        <vr
          className="ScoreboardVRLine"
        />
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            W
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            T
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
        <div
          className="ScoreboardNameColumn"
        >
          <div
            className="ScoreboardCategories"
          >
            L
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
          <div
            className="ScoreboardName"
          >
            0
          </div>
        </div>
      </div>
    </div>
    <div
      className="GameOverButtonsArea"
    >
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        REMATCH
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        MAIN MENU
      </button>
      <button
        className="GameOverButton btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        QUIT
      </button>
    </div>
  </div>
</div>
`;
